Fix spacing for rss feed

--- a/client/src/app/shared/shared-video-miniature/videos-list.component.scss
+++ b/client/src/app/shared/shared-video-miniature/videos-list.component.scss
@@ -39,7 +39,8 @@ $margin-top: 30px;
   .action-block {
     grid-column: 3;
     grid-row: 1/3;
-    margin-top: $margin-top;
+    // margin-top: $margin-top;
+    align-self: end;
   }
 
   my-feed {
